Fix left/right cutoff: reduce card width to 16vw and decrease margins

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body.light-theme {
 
 .time-group {
     display: inline-block;
-    margin: 0 1.5vw;
+    margin: 0 1vw;
     vertical-align: middle;
     position: relative;
 }
@@ -156,33 +156,33 @@ body.light-theme {
     display: inline-block;
     position: relative;
     background: rgba(40, 40, 40, 0.6);
-    padding: 2.5vh 1.5vw;
-    -webkit-border-radius: 2.5vw;
-    -moz-border-radius: 2.5vw;
-    border-radius: 2.5vw;
-    -webkit-box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.5);
-    box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.5);
+    padding: 2vh 1.2vw;
+    -webkit-border-radius: 2vw;
+    -moz-border-radius: 2vw;
+    border-radius: 2vw;
+    -webkit-box-shadow: 0 1vh 3vh rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 1vh 3vh rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1vh 3vh rgba(0, 0, 0, 0.5);
 }
 
 body.light-theme .digit-group {
     background: rgba(255, 255, 255, 0.8);
-    -webkit-box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1.5vh 4vh rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1vh 3vh rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 1vh 3vh rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1vh 3vh rgba(0, 0, 0, 0.1);
 }
 
 .flip-unit {
     display: inline-block;
-    margin: 0 0.4vw;
+    margin: 0 0.3vw;
     vertical-align: middle;
 }
 
 .flip-card {
     position: relative;
-    width: 18vw;
-    height: 26vh;
-    font-size: 18vw;
+    width: 16vw;
+    height: 24vh;
+    font-size: 16vw;
     font-weight: 700;
     color: #c0c0c0;
     text-align: center;
@@ -222,7 +222,7 @@ body.light-theme .flip-card {
 
 .flip-card-top {
     top: 0;
-    line-height: 26vh;
+    line-height: 24vh;
     -webkit-border-bottom-left-radius: 0;
     -webkit-border-bottom-right-radius: 0;
     -moz-border-radius-bottomleft: 0;
@@ -288,7 +288,7 @@ body.light-theme .flip-card-back-bottom {
 
 .flip-card-back-top {
     top: 0;
-    line-height: 26vh;
+    line-height: 24vh;
     -webkit-border-bottom-left-radius: 0;
     -webkit-border-bottom-right-radius: 0;
     -moz-border-radius-bottomleft: 0;
